--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -69,7 +69,7 @@
     <!-- This CoordinatorLayout is to dodge the BottomNavigationView when the Snackbar is shown -->
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="696dp"
+        android:layout_height="match_parent"
         android:layout_marginBottom="56dp"
         android:background="@android:color/transparent">
 
@@ -78,6 +78,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
+            android:foregroundGravity="bottom"
             android:layout_margin="@dimen/fab_margin"
             android:contentDescription="@string/fab_content_description"
             app:srcCompat="@android:drawable/ic_dialog_email" />
