--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -10,7 +10,7 @@
             android:title="@string/menu_home" />
         <item
             android:id="@+id/nav_find_child_care"
-            android:icon="@drawable/ic_parent"
+            android:icon="@android:drawable/ic_menu_agenda"
             android:title="@string/menu_find_child_care" />
         <item
             android:id="@+id/nav_resources"
