--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -32,7 +32,11 @@
         android:id="@+id/nav_home"
         android:name="org.oregonccpt.occpt.ui.home.HomeFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home">
+        <action
+            android:id="@+id/action_nav_home_to_nav_officers"
+            app:destination="@id/nav_officers" />
+    </fragment>
 
     <fragment
         android:id="@+id/nav_about"
@@ -63,5 +67,11 @@
         android:name="org.oregonccpt.occpt.ui.contact.ContactFragment"
         android:label="@string/menu_contact"
         tools:layout="@layout/fragment_contact" />
+
+    <fragment
+        android:id="@+id/nav_officers"
+        android:name="org.oregonccpt.occpt.ui.officers.OfficersFragment"
+        android:label="@string/our_officers_staff_title"
+        tools:layout="@layout/fragment_officers" />
 
 </navigation>
