--- a/app/src/main/res/layout/item_officer_card.xml
+++ b/app/src/main/res/layout/item_officer_card.xml
@@ -11,13 +11,13 @@
         android:orientation="horizontal"
         android:padding="16dp">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/officer_photo"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:scaleType="centerCrop"
             android:src="@drawable/ic_avatar_1"
-            android:contentDescription="@string/officer_photo_content_description" />
+            app:civ_border_width="2dp"
+            app:civ_border_color="#FF000000"/>
 
         <LinearLayout
             android:layout_width="0dp"
