--- a/app/src/main/res/layout/item_officer_card.xml
+++ b/app/src/main/res/layout/item_officer_card.xml
@@ -5,10 +5,9 @@
     android:layout_height="wrap_content"
     android:layout_margin="8dp">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:padding="16dp">
 
         <TextView
@@ -20,9 +19,11 @@
             android:textStyle="bold" />
 
         <LinearLayout
+            android:id="@+id/officer_info_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_below="@id/officer_title"
             android:layout_marginTop="8dp">
 
             <de.hdodenhof.circleimageview.CircleImageView
@@ -65,6 +66,42 @@
 
         </LinearLayout>
 
-    </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_below="@id/officer_info_layout"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="8dp">
+
+            <ImageView
+                android:id="@+id/call_icon"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/ic_call"
+                android:layout_marginEnd="16dp"
+                android:visibility="gone"
+                android:contentDescription="@string/call_officer_content_description" />
+
+            <ImageView
+                android:id="@+id/email_icon"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/ic_email"
+                android:layout_marginEnd="16dp"
+                android:visibility="gone"
+                android:contentDescription="@string/email_officer_content_description" />
+
+            <ImageView
+                android:id="@+id/add_contact_icon"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/ic_add_contact"
+                android:visibility="gone"
+                android:contentDescription="@string/add_officer_contact_content_description" />
+
+        </LinearLayout>
+
+    </RelativeLayout>
 
 </com.google.android.material.card.MaterialCardView>
