--- a/app/src/main/res/layout/item_benefit_card.xml
+++ b/app/src/main/res/layout/item_benefit_card.xml
@@ -12,14 +12,26 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/benefit_title"
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:text="Benefit Title"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:padding="16dp">
+
+            <TextView
+                android:id="@+id/benefit_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Benefit Title"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <ImageView
+                android:id="@+id/benefit_title_image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"/>
+
+        </FrameLayout>
 
         <TextView
             android:id="@+id/benefit_description"
