Start of the Focus Union App- Benefits tab added

--- a/app/src/main/res/layout/item_benefit_card.xml
+++ b/app/src/main/res/layout/item_benefit_card.xml
@@ -14,13 +14,13 @@
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:padding="16dp">
+            android:layout_height="80dp">
 
             <TextView
                 android:id="@+id/benefit_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:padding="16dp"
                 android:text="Benefit Title"
                 android:textSize="20sp"
                 android:textStyle="bold" />
