--- a/app/src/main/res/layout/item_benefit_card.xml
+++ b/app/src/main/res/layout/item_benefit_card.xml
@@ -18,8 +18,9 @@
 
             <TextView
                 android:id="@+id/benefit_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
                 android:padding="16dp"
                 android:text="Benefit Title"
                 android:textSize="20sp"
@@ -29,9 +30,9 @@
                 android:id="@+id/benefit_title_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:contentDescription="@string/healthiest_you_logo_description"
                 android:scaleType="fitCenter"
-                android:visibility="gone"
-                android:contentDescription="@string/healthiest_you_logo_description"/>
+                android:visibility="gone" />
 
         </FrameLayout>
 
