--- a/app/src/main/res/layout/item_benefit_card.xml
+++ b/app/src/main/res/layout/item_benefit_card.xml
@@ -36,15 +36,33 @@
 
         </FrameLayout>
 
-        <TextView
-            android:id="@+id/benefit_description"
+        <LinearLayout
+            android:id="@+id/benefit_details_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp"
-            android:paddingBottom="16dp"
-            android:text="Benefit Description"
-            android:visibility="gone" />
+            android:orientation="vertical"
+            android:visibility="gone">
+
+            <TextView
+                android:id="@+id/benefit_description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
+                android:paddingBottom="16dp"
+                android:text="Benefit Description" />
+
+            <Button
+                android:id="@+id/more_info_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="16dp"
+                android:text="@string/click_for_more_info"
+                android:visibility="gone" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
